style(client): fix overflow for tags

--- a/client/src/styles/pages/set.module.scss
+++ b/client/src/styles/pages/set.module.scss
@@ -20,8 +20,10 @@
       display: flex;
       align-items: center;
       gap: 0.25rem;
+      overflow-x: auto;
 
       li {
+        flex-shrink: 0;
         height: 100%;
         padding: 0.1rem 0.5rem;
         border-radius: rem(25);
